--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/dcb0d7111f.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <title>AngularShop</title>
   <base href="/">
